JumpScript/tests/baselines/reference/objectTypeWithOptionalProperty1.errors.txt
tests/cases/compiler/objectTypeWithOptionalProperty1.jump(2,10): error TS1162: An object member cannot be declared optional.


==== tests/cases/compiler/objectTypeWithOptionalProperty1.jump (1 errors) ====
        var b = {
            x?: 1 // error
             ~
!!! error TS1162: An object member cannot be declared optional.
        }